# arduino-clion-minimal

./: CMakeLists.txt  LICENSE  README.org  arduino-clion-minimal.ino  arduino-m0plus-toolchain.cmake  arduino-uno-toolchain.cmake  blink-main.cpp
